tested out printing-method page but not suitable

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -163,7 +163,7 @@
                 </div><!--//item-->
             </div><!--//row-->
             <div class="col-12 text-center">
-              <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/" target="_blank" style="text-center">Write a review for us</a>
+              <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/reviews/" target="_blank">Write a review for us</a>
             </div>
         </div><!--//container-->
     </section><!--//testimonials-->
