--- a/src/app/printing-methods/printing-methods.component.html
+++ b/src/app/printing-methods/printing-methods.component.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="./partials/header.js"></script>
       <section class="promo section">
           <div class="container text-center">
-              <h2 class="title">Our Work</h2>
+              <h2 class="title">Printing Methods &amp; Tips</h2>
               <p class="intro">Our approach to lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi in leo turpis. Ut ex neque, cursus vulputate facilisis sed, tempor quis ligula.</p>
           </div><!--//container-->
       </section><!--//promo-->
@@ -22,8 +22,15 @@
                           <span class="fs1" aria-hidden="true" data-icon="&#xe104;"></span>
                       </div><!--//header-->
                       <div class="desc">
-                          <h3 class="sub-title">UX &amp; Front-end</h3>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae diam magna. Curabitur nibh metus, ultricies sed aliquam euismod, scelerisque eu purus. In hac habitasse platea dictumst. Suspendisse tempus elit eget libero suscipit pulvinar.</p>
+                          <h3 class="sub-title">Silkscreen Printing</h3>
+                          <p>Silkscreen printing is one of the most common printing method. It is the process of transferring ink through the screen and onto the apparel. </p>
+                          <p><strong>Advantages</strong></p>
+                          <p>1) Very Durable and long lasting</p>
+                          <p>2) Very cost efficient for large quantities</p>
+                          <p>3) Wide variety of colours ; Able to follow Pantone colour</p>
+                          <p><strong>Disadvantages</strong></p>
+                          <p>1) Expensive for small quantities</p>
+                          <p>2) Expensive for multiple coloured designs</p>
                       </div>
                   </div><!--//item-inner-->
               </div><!--//item-->
@@ -33,8 +40,17 @@
                           <span class="fs1" aria-hidden="true" data-icon="&#xe0ea;"></span>
                       </div><!--//header-->
                       <div class="desc">
-                          <h3 class="sub-title">Back-end &amp; Database</h3>
-                          <p>Phasellus fermentum accumsan fermentum. Vestibulum elit sapien, consequat vitae auctor sit amet, elementum sed elit. Quisque ullamcorper quis augue sit amet porttitor. Maecenas ac dolor iaculis, dapibus.</p>
+                          <h3 class="sub-title">Digital &amp; Vinyl Heat Transfer Printing</h3>
+                          <p>Digital &amp; Vinyl Heat Transfer Printing is the process of using a film and transferring it onto the apparel via intense heat.</p>
+                          <p>A) For Digital Heat Transfer Printing, this printing method has the ability to do up multiple coloured designs and even gradient colours.</p>
+                          <p><strong>Advantages</strong></p>
+                          <p>1) Versatile and can be printed on many material</p>
+                          <p>2) Most cost friendly for multiple-coloured designs for small quantities</p>
+                          <p>3) Able to print out Gradient Effect</p>
+                          <p><strong>Disadvantages</strong></p>
+                          <p>1) Not so durable </p>
+                          <p>2) Colours may fade away with time</p>
+                          <p>3) Recommended to hand wash. Not suitable to be placed in dryer</p>
                       </div>
                   </div><!--//item-inner-->
               </div><!--//item-->
