--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <!-- ******HEADER****** -->
 <header id="header" class="header fixed-top">
   <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-md-6 offset-md-3 d-flex justify-content-center">
       <h1 class="logo text-center">
         <a href="index.html">
-          <img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage" height="40px;" style="margin-top: 10px;">
+          <img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage">
         </a>
         <!-- <span class="highlight">The</span>JerrardGarage</a> -->
       </h1>
