--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -13,7 +13,7 @@
         <section id="home-promo" class="home-promo section">
             <div class="container text-center">
                 <h2 class="title">
-                    <span class="upper"><img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage" height="60px;"></span>
+                    <span class="upper"><img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage"></span>
                     <span class="middle">T-Shirt Printing Singapore</span>
                     <span class="bottom">Customised shirts at cheap price. No minimum order required.</span>
                 </h2>
