--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,3 +1,13 @@
 .header-wrapper-home {
   min-height: 650px;
 }
+
+.upper {
+  height: 5em;
+}
+
+@media (max-width: 767px) {
+  .upper {
+    height: 1em;
+  }
+}
