--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -31,7 +31,7 @@
                 <div class="item col-lg-3 col-md-6 col-12">
                     <div class="item-inner">
                         <div class="fs1" aria-hidden="true" data-icon="&#xe0e1;"></div>
-                        <h3 class="sub-title">Quick Turn Around & Delivery</h3>
+                        <h3 class="sub-title">Quick Turn Around &amp; Delivery</h3>
                         <div class="desc">
                             <p>We work every order with speed and precise. Shortest lead time and delivery for bulk purchase. Lay back relax, we got it all sorted out with a guaranteed a peace of mind.</p>
                         </div>
