--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- ******HEADER****** -->
 <header id="header" class="header fixed-top">
   <div class="row">
-    <div class="col-md-6 offset-md-3 d-flex justify-content-center">
+    <div class="col-md-6 offset-md-3 col-6 offset-3 d-flex justify-content-center">
       <h1 class="logo text-center">
         <a href="index.html">
           <img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage">
@@ -11,7 +11,7 @@
       <!--//logo-->
     </div>
 
-    <div class="col-3 text-center" style="margin-top:8px;">
+    <div class="col-md-3 col-3 text-center" style="margin-top:8px;">
       <a target="_blank" title="find us on Facebook" href="https://www.facebook.com/tjgsingapore/">
         <img alt="follow me on facebook" src="https://en.facebookbrand.com/wp-content/uploads/2016/05/flogo_rgb_hex-brc-site-250.png"
           width="30" border=0 style="margin-right:5px">
