--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -40,7 +40,7 @@
                 <div class="item col-lg-3 col-md-6 col-12">
                     <div class="item-inner">
                         <div class="fs1" aria-hidden="true" data-icon="&#xe0ed;"></div>
-                        <h3 class="sub-title">Cheap & Transparent Pricing</h3>
+                        <h3 class="sub-title">Cheap &amp; Transparent Pricing</h3>
                         <div class="desc">
                             <p>We provide cheap and affordable pricing at competitive rates. We work around with your budget and ensure we deliver a quality services.</p>
                         </div>
@@ -174,15 +174,15 @@
             <h2 class="title">Who we have worked with</h2>
             <!-- <p class="intro">SaaS / Mobile apps / Marketing sites / Internal apps</p> -->
             <ul class="logo-list list-inline row">
-                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid" style="height:100px;" src="assets/logos/CAG.png" alt="Changi Airport Group" /></a></li>
-                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid" src="assets/logos/Found.png" alt="Found" /></a></li>
-                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid" style="height:100px;" src="assets/logos/KFC.png" alt="KFC" /></a></li>
-                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid" src="assets/logos/Mindshare.png" alt="Mindshare" /></a></li>
+                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid clientLogo" src="assets/logos/CAG.png" alt="Changi Airport Group" /></a></li>
+                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid clientLogo" src="assets/logos/Found.png" alt="Found" /></a></li>
+                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid clientLogo" src="assets/logos/KFC.png" alt="KFC" /></a></li>
+                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid clientLogo" src="assets/logos/Mindshare.png" alt="Mindshare" /></a></li>
             </ul><!--//logo-list-->
             <ul class="logo-list list-inline row last">
-                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid" style="height:100px;" src="assets/logos/MSD.png" alt="MSD" /></a></li>
-                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid" style="height:100px;" src="assets/logos/Singtel.png" alt="SingTel" /></a></li>
-                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid" src="assets/logos/SQ.png" alt="Singapore Airlines" /></a></li>
+                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid clientLogo" src="assets/logos/MSD.png" alt="MSD" /></a></li>
+                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid clientLogo" src="assets/logos/Singtel.png" alt="SingTel" /></a></li>
+                <li class="col-md-3 col-6"><a href="#"><img class="img-fluid clientLogo" src="assets/logos/SQ.png" alt="Singapore Airlines" /></a></li>
             </ul><!--//logos-list-->
         </div><!--//container-->
         <div class="col-12 text-center" style="padding-top: 30px;">
