--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,18 +29,18 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div id="navbar-collapse" class="navbar-collapse collapse justify-content-center">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav" >
             <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" routerLink='/home'>Home</a>
+              <a class="nav-link" routerLink='/home' (click)="onClick()">Home</a>
             </li>
             <li class="nav-item dropdown" routerLinkActive="active">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">About
                 <i class="fa fa-angle-down"></i>
               </a>
-              <div class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" routerLink="/about" routerLinkActive="active">About Us</a>
-                <a class="dropdown-item" href="https://www.facebook.com/tjgsingapore/" target="_blank">Portfolio Gallery</a>
-                <a class="dropdown-item" routerLink="/blog" routerLinkActive="active">Blog (Under Construction)</a>
+              <div class="dropdown-menu dropdown-menu-right" >
+                <a class="dropdown-item" routerLink="/about" routerLinkActive="active" (click)="onClick()">About Us</a>
+                <a class="dropdown-item" href="https://www.facebook.com/tjgsingapore/" target="_blank" (click)="onClick()">Portfolio Gallery</a>
+                <a class="dropdown-item" routerLink="/blog" routerLinkActive="active" (click)="onClick()">Blog (Under Construction)</a>
                 <!-- <a class="dropdown-item" routerLink="/blog-post">Single Blog Post</a>
                       <a class="dropdown-item" routerLink="/404">404 Page</a> -->
               </div>
@@ -55,16 +55,16 @@
               </div>
             </li>
             <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" routerLink="/printing-methods">Printing Methods</a>
+              <a class="nav-link" routerLink="/printing-methods" (click)="onClick()">Printing Methods</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" routerLink="/faq">FAQ</a>
+              <a class="nav-link" routerLink="/faq" (click)="onClick()">FAQ</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" routerLink="/quote">Requst for quote</a>
+              <a class="nav-link" routerLink="/quote" (click)="onClick()">Requst for quote</a>
             </li>
             <li class="nav-item last" routerLinkActive="active">
-              <a class="nav-link" routerLink="/contact-us">Contact us</a>
+              <a class="nav-link" routerLink="/contact-us" (click)="onClick()">Contact us</a>
             </li>
           </ul>
           <!--//nav-->
