--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
       <!--//logo-->
     </div>
 
-    <div class="col-md-3 col-3 text-center" style="margin-top:8px;">
+    <div class="col-md-3 col-3 text-center social-media" style="margin-top:8px;">
       <a target="_blank" title="find us on Facebook" href="https://www.facebook.com/tjgsingapore/">
         <img alt="follow me on facebook" src="https://en.facebookbrand.com/wp-content/uploads/2016/05/flogo_rgb_hex-brc-site-250.png"
           width="30" border=0 style="margin-right:5px">
