--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,12 +13,11 @@
 
     <div class="col-md-3 col-3 text-center social-media" style="margin-top:8px;">
       <a target="_blank" title="find us on Facebook" href="https://www.facebook.com/tjgsingapore/">
-        <img alt="follow me on facebook" src="https://en.facebookbrand.com/wp-content/uploads/2016/05/flogo_rgb_hex-brc-site-250.png"
-          width="30" border=0 style="margin-right:5px">
+        <img class="facebook" alt="follow me on facebook" src="https://en.facebookbrand.com/wp-content/uploads/2016/05/flogo_rgb_hex-brc-site-250.png">
       </a>
 
       <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/tjg.sg">
-        <img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0>
+        <img class="instagram" alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0>
       </a>
     </div>
 
