added quotation form

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,7 +1,4 @@
-<body class="about-page">
-    <div class="header-wrapper header-wrapper-about">
-
-    </div><!--//header-wrapper-->
+<body class="about-page no-header-wrapper">
 
     <!-- ******team Section****** -->
     <section id="team" class="team section">
@@ -16,7 +13,7 @@
             Our customer satisfaction will always be our pride and joy. We guarantee excellent customer service and quality assurance.  We dare say we are the cheapest t shirt printing in Singapore too!</p>
         </div><!--//container-->
         <div class="col-12 text-center">
-          <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/" target="_blank" style="text-center">Browse our portfolio</a>
+          <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/" target="_blank">Browse our portfolio</a>
         </div>
     </section><!--//team-section-->
 
