--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,14 +1,4 @@
-<body class="blog-home-page">
-  <div class="header-wrapper header-wrapper-blog-home">
-    <!-- HEADER PARTIALS -->
-    <script type="text/javascript" src="./partials/header.js"></script>
-      <section class="promo section">
-          <div class="container text-center">
-              <h2 class="title">Blog</h2>
-              <p class="intro">Stay tuned for updates</p>
-          </div><!--//container-->
-      </section><!--//promo-->
-  </div><!--//header-wrapper-->
+<body class="blog-home-page no-header-wrapper">
   
   <section id="blog-list" class="blog-list section">
     <div class="container">
