--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,14 +1,4 @@
-<body class="contact-page">
-    <div class="header-wrapper header-wrapper-contact">
-      <!-- HEADER PARTIALS -->
-      <script type="text/javascript" src="./partials/header.js"></script>
-        <section class="promo section">
-            <div class="container text-center">
-                <h2 class="title">Contact Us</h2>
-                <p class="intro">Send us a message if you have questions for us or to find out more about our services. We would love to hear from you!</p>
-            </div><!--//container-->
-        </section><!--//promo-->
-    </div><!--//header-wrapper-->
+<body class="contact-page no-header-wrapper">
 
     <!-- ******Contact Section****** -->
     <section class="contact-section section">
