--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -60,7 +60,7 @@
               <a class="nav-link" routerLink="/faq" (click)="onClick()">FAQ</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-              <a class="nav-link" routerLink="/quote" (click)="onClick()">Requst for quote</a>
+              <a class="nav-link" routerLink="/request-for-quote" (click)="onClick()">Requst for quote</a>
             </li>
             <li class="nav-item last" routerLinkActive="active">
               <a class="nav-link" routerLink="/contact-us" (click)="onClick()">Contact us</a>
