--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -13,7 +13,7 @@
         <section id="home-promo" class="home-promo section">
             <div class="container text-center">
                 <h2 class="title">
-                    <span class="upper"><img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage"></span>
+                    <!-- <span class="upper"><img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage"></span> -->
                     <span class="middle">T-Shirt Printing Singapore</span>
                     <span class="bottom">Customised shirts at cheap price. No minimum order required.</span>
                 </h2>
@@ -75,23 +75,23 @@
             <h2 class="title text-center">Customer Reviews</h2>
             <p class="intro text-center">Don’t just take our words for it, see what our customers are saying</p>
             <div class="row">
+
                 <div class="item col-lg-6 col-12">
                     <div class="item-inner">
                         <div class="quote-container">
                             <i class="fa fa-quote-left"></i>
-                            <blockquote class="quote">We had great experience working with Phasellus ut cursus tellus. Etiam ullamcorper varius diam, nec consequat dolor gravida non. Nullam commodo feugiat arcu, ut scelerisque nisl vulputate eget. Cras a euismod elit.
-
+                            <blockquote class="quote">I've been ordering my class and CCA t-shirts from TheJerrardGarage since 2015. They provide very good services, which include designing and even delivery. The quality of the t-shirts and printing has always been fantastic and the first batch of t-shirts I ordered still looks new! The prices are also reasonable and cheaper than previous vendors that I've ordered from. TheJerrardGarage will have my continued support!
                             </blockquote><!--//quote-->
                         </div><!--//quote-->
                         <div class="meta">
                             <div class="profile">
-                                <img class="img-circle" src="assets/images/client/client-profile-1.png" alt="" />
-                                <p class="name">Katherine Hamilton<br />
-                                    <span class="source-title">Product Manager</span>
+                                <!-- <img class="img-circle" src="assets/images/client/client-profile-2.png" alt="" /> -->
+                                <p class="name">Riyan<br />
+                                    <span class="source-title">Teacher</span>
                                 </p>
                             </div><!--//profile-->
                             <div class="client-logo">
-                                <img class="img-fluid" src="assets/images/client/client-logo-1.png" alt="" />
+                                <!-- <img class="img-fluid" src="assets/images/client/client-logo-2.png" alt="" /> -->
                             </div><!--//client-logo-->
                         </div><!--//meta-->
                     </div><!--//item-inner-->
@@ -101,18 +101,19 @@
                     <div class="item-inner">
                         <div class="quote-container">
                             <i class="fa fa-quote-left"></i>
-                            <blockquote class="quote">Cras condimentum erat vel quam dignissim, eu venenatis velit porta. Praesent fermentum, mi sit amet mollis fringilla, ex risus condimentum mauris, at dapibus ipsum turpis non ipsum.
+                            <blockquote class="quote">I really like to order shirts from TheJerrardGarage. They are always very efficient in response & deliver quality products. The shirts are always quoted with reasonable pricing & the team often advice in terms of area of improvement for the shirt design. Their services are great! They are always sincere in seeking customers feedback striving for improvement. Highly recommended.
+
                             </blockquote><!--//quote-->
                         </div><!--//quote-->
                         <div class="meta">
                             <div class="profile">
-                                <img class="img-circle" src="assets/images/client/client-profile-2.png" alt="" />
-                                <p class="name">Aaron Brown<br />
-                                    <span class="source-title">Marketing Director</span>
+                                <!-- <img class="img-circle" src="assets/images/client/client-profile-4.png" alt="" /> -->
+                                <p class="name">Ying Xuan<br />
+                                    <span class="source-title">National Police Cadet Corps</span>
                                 </p>
                             </div><!--//profile-->
                             <div class="client-logo">
-                                <img class="img-fluid" src="assets/images/client/client-logo-2.png" alt="" />
+                                <!-- <img class="img-fluid" src="assets/images/client/client-logo-4.png" alt="" /> -->
                             </div><!--//client-logo-->
                         </div><!--//meta-->
                     </div><!--//item-inner-->
@@ -121,46 +122,33 @@
                 <div class="clearfix"></div>
 
                 <div class="item col-lg-6 col-12">
-                    <div class="item-inner">
-                        <div class="quote-container">
-                            <i class="fa fa-quote-left"></i>
-                            <blockquote class="quote">Pellentesque nec maximus justo, a ultrices ligula. Duis sollicitudin suscipit arcu eget interdum. Nullam et porttitor sem, id iaculis eros. Sed feugiat leo et ligula pulvinar, et lobortis velit pretium.
-                            </blockquote><!--//quote-->
-                        </div><!--//quote-->
-                        <div class="meta">
-                            <div class="profile">
-                                <img class="img-circle" src="assets/images/client/client-profile-3.png" alt="" />
-                                <p class="name">Phillip Perry<br />
-                                    <span class="source-title">Product Manager</span>
-                                </p>
-                            </div><!--//profile-->
-                            <div class="client-logo">
-                                <img class="img-fluid" src="assets/images/client/client-logo-3.png" alt="" />
-                            </div><!--//client-logo-->
-                        </div><!--//meta-->
-                    </div><!--//item-inner-->
-                </div><!--//item-->
-
-                <div class="item col-lg-6 col-12">
-                    <div class="item-inner">
-                        <div class="quote-container">
-                            <i class="fa fa-quote-left"></i>
-                            <blockquote class="quote">We are impressed by lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tellus nisi, maximus vel risus vel, fermentum faucibus magna. Aliquam sed aliquet eros. Nunc nec aliquet ligula.
-                            </blockquote><!--//quote-->
-                        </div><!--//quote-->
-                        <div class="meta">
-                            <div class="profile">
-                                <img class="img-circle" src="assets/images/client/client-profile-4.png" alt="" />
-                                <p class="name">Victoria Simmons<br />
-                                    <span class="source-title">Product Designer</span>
-                                </p>
-                            </div><!--//profile-->
-                            <div class="client-logo">
-                                <img class="img-fluid" src="assets/images/client/client-logo-4.png" alt="" />
-                            </div><!--//client-logo-->
-                        </div><!--//meta-->
-                    </div><!--//item-inner-->
-                </div><!--//item-->
+                        <div class="item-inner">
+                            <div class="quote-container">
+                                <i class="fa fa-quote-left"></i>
+                                <blockquote class="quote">TheJerrardGarage had been my go-to place for good quality, timely and trustable printing company; both for corporate or personal printing of shirts. <br><br>
+    
+                                        They had been easy to work with. There were more than 3 occasions that TJG help to rush a tight deadline to ensure the printing of shirts is delivered on time.  <br><br>
+                                        
+                                        TJG also offers a range of fabrics to suit your budget. Dri-fit material ranges from the most basic "thin" material to the "thicker" moisture wicking type. Recommendation from TJG on the printing is spot-on as well. When budget is tight, they will inform in advance that the printing is of lower quality. <br><br>
+                                        
+                                        In summary, TJG had been providing honest and top quality shirt printing services. 
+                                        
+    
+                                </blockquote><!--//quote-->
+                            </div><!--//quote-->
+                            <div class="meta">
+                                <div class="profile">
+                                    <!-- <img class="img-circle" src="assets/images/client/client-profile-1.png" alt="" /> -->
+                                    <p class="name">Andy<br />
+                                        <span class="source-title">Changi Airport Group</span>
+                                    </p>
+                                </div><!--//profile-->
+                                <div class="client-logo">
+                                    <!-- <img class="img-fluid" src="assets/images/client/client-logo-1.png" alt="" /> -->
+                                </div><!--//client-logo-->
+                            </div><!--//meta-->
+                        </div><!--//item-inner-->
+                    </div><!--//item-->
             </div><!--//row-->
             <div class="col-12 text-center">
               <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/reviews/" target="_blank">Write a review for us</a>
