--- a/src/app/printing-methods/printing-methods.component.html
+++ b/src/app/printing-methods/printing-methods.component.html
@@ -1,14 +1,4 @@
-<body class="caset-study-page">
-  <div class="header-wrapper header-wrapper-work">
-    <!-- HEADER PARTIALS -->
-    <script type="text/javascript" src="./partials/header.js"></script>
-      <section class="promo section">
-          <div class="container text-center">
-              <h2 class="title">Printing Methods &amp; Tips</h2>
-              <p class="intro">Our approach to lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi in leo turpis. Ut ex neque, cursus vulputate facilisis sed, tempor quis ligula.</p>
-          </div><!--//container-->
-      </section><!--//promo-->
-  </div><!--//header-wrapper-->
+<body class="caset-study-page no-header-wrapper">
 
   <!-- ******Services Section****** -->
   <section id="services" class="services section">
