--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,23 +1,16 @@
-<body class="about-page">
-    <div class="header-wrapper header-wrapper-faq">
-      <!-- HEADER PARTIALS -->
-      <script type="text/javascript" src="./partials/header.js"></script>
-      <section class="promo section">
-          <div class="container text-center">
-              <h2 class="title">Frequently Asked Questions</h2>
-              <!-- <p class="intro">Below are the questions we got asked most</p> -->
-          </div><!--//container-->
-      </section><!--//promo-->
-    </div><!--//header-wrapper-->
+<body class="about-page no-header-wrapper">
 
     <section id="team" class="team section">
             <div class="container">
+                <h2 class="title text-center">Frequently Asked Questions</h2>
+
               <div id="accordion">
 
                 <div class="card" *ngFor="let question of questions">
-                <div class="card-header" id="heading{{question.id}}">
+                <div class="card-header" id="heading{{question.id}}" data-toggle="collapse" [attr.data-target]="'#collapse'+question.id" aria-expanded="true" [attr.aria-controls]="'#collapse'+question.id">
                   <h5 class="mb-0">
-                    <button class="btn btn-link title" style="margin:0;height:auto;white-space:normal;" data-toggle="collapse" [attr.data-target]="'#collapse'+question.id" aria-expanded="true" [attr.aria-controls]="'#collapse'+question.id">
+                    <span class="fa fa-angle-down pull-right"></span>
+                    <button class="btn btn-link title" style="margin:0;height:auto;white-space:normal;" >
                       {{question.question}}
                     </button>
                   </h5>
@@ -32,7 +25,7 @@
             </div>
           </div><!--//container-->
           <div class="col-12 text-center">
-            <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/" target="_blank" style="text-center">Browse our portfolio</a>
+            <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/" target="_blank">Browse our portfolio</a>
           </div>
         </section><!--//team-section-->
 
