--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,16 +1,5 @@
-<body class="case-study-page">
-  <div class="header-wrapper header-wrapper-work">
-    <section class="promo section">
-      <div class="container text-center">
-        <h2 class="title">Our Products</h2>
-        <p class="intro">Our approach to lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi in leo turpis. Ut ex neque, cursus
-          vulputate facilisis sed, tempor quis ligula.</p>
-      </div>
-      <!--//container-->
-    </section>
-    <!--//promo-->
-  </div>
-  <!--//header-wrapper-->
+<body class="case-study-page no-header-wrapper">
+  
 
   <!-- ******Work list Section****** -->
   <section id="work-list" class="section work-list">
